<resources>
    <string name="app_name">Home Control</string>
    <string name="name">NAME</string>
    <string name="login">Login</string>
    <string name="attempts_remaining">Attempts Remaining</string>
    <string name="voice_to_text">VOICE TO TEXT</string>
    <string name="tap_on_mic_to_speak">Tap on mic to speak</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="Name">Name</string>
    <string name="start_wifi">Start Wifi</string>
    <string name="connect_to_appropriate_wifi_for_automation">Connect to appropriate Wifi for Automation</string>
    <!-- <string name="userid">Username</string>-->
    <string name="firstname">First name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="lastname">Last name</string>

    <string name="register">Register</string>
    <string name="user_name">Username</string>
    <string name="register_me">Register Me!</string>

    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="server_address">Server Address</string>

    <string name="internal_error">Internal Error</string>
    <string name="network_error">Network Error</string>

</resources>
