<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.lenovo.myapp2.MainActivity">

    <TextView
        android:id="@+id/tvconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/connect_to_appropriate_wifi_for_automation"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvconnect"
        android:layout_centerHorizontal="true"
        android:onClick="btnWifi_onClick"
        android:text="@string/start_wifi"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_ternary"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_ternary"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="14sp" />
        <!--
                <Button
                    android:id="@+id/btnregister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="btnregister_onClick"
                    android:text="@strRegisterActivityster"
                    android:textSize="14sp" />-->

        <TextView
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end|center_vertical"
            android:onClick="btnregister_onClick"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/register_me"
            android:textColor="@color/text_color_primary"
            android:textSize="14sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/attempts_remaining"
        android:textColor="@color/text_color_secondary"
        android:textSize="14sp" />
</RelativeLayout>
