<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.lenovo.myapp2.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/userid"
            android:layout_width="@dimen/nav_header_height"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_ternary"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="@dimen/nav_header_height"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="140"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_ternary"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/firstname"
            android:layout_width="@dimen/nav_header_height"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="40"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_ternary"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/lastname"
            android:layout_width="@dimen/nav_header_height"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="40"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_ternary"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_ternary"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnregister"
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textColorHint="@color/text_color_ternary"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>
